- Add Rebuild Alias function (Voltan)
- Add Set and reset Next and Previous function automatically (Voltan)
- Add change topic order whit AJAX (Voltan)
- Add new options for make URL (Voltan)
- Add Show/hide topic in index page (Voltan)
- Add support for module admin class (Voltan)
- Add option for attach file for contents (Voltan)
- Fix bug in delete pages (Voltan)

Language changes :
+ Add
- Remove
* Edit

main.php
+ _FMCONTENT_TOPIC_ID 
+ _FMCONTENT_TOPIC_NAME 
+ _FMCONTENT_TOPIC_DESC 
+ _FMCONTENT_TOPIC_IMG 

admin.php
+ _FMCONTENT_TOPIC_HOMEPAGE
+ _FMCONTENT_TOPIC_HOMEPAGE_DESC
+ _FMCONTENT_TOPIC_HOMEPAGE_1
+ _FMCONTENT_TOPIC_HOMEPAGE_2
+ _FMCONTENT_TOPIC_HOMEPAGE_3
+ _FMCONTENT_TOPIC_HOMEPAGE_4
+ _FMCONTENT_TOPIC_OPTIONS
+ _FMCONTENT_TOPIC_OPTIONS_DESC
+ _FMCONTENT_TOPIC_ALIAS
+ _FMCONTENT_ALIAS_TITLE
+ _FMCONTENT_ALIAS_CONTENT
+ _FMCONTENT_ALIAS_TOPIC
+ _FMCONTENT_TOPIC_NUM
+ _FMCONTENT_MSG_ALIASERROR
+ _FMCONTENT_TOPIC_SHOW
+ _FMCONTENT_ADMENU1
+ _FMCONTENT_ADMENU2
+ _FMCONTENT_INDEX_TOPICS
+ _FMCONTENT_INDEX_CONTENTS
+ _FMCONTENT_ADD_FILE
+ _FMCONTENT_ADMENU1
+ _FMCONTENT_ADMENU2
+ _FMCONTENT_INDEX_TOPICS
+ _FMCONTENT_INDEX_CONTENTS
+ _FMCONTENT_FILE_ID
+ _FMCONTENT_FILE_ONLINE
+ _FMCONTENT_FILE_ACTION
+ _FMCONTENT_FORM_FILE
+ _FMCONTENT_FILE_TITLE
+ _FMCONTENT_FILE_CONTENT
+ _FMCONTENT_STATUS
+ _FMCONTENT_SELECT_FILE
+ _FMCONTENT_FILE_TIPS
+ _FMCONTENT_FILE_TYPE
+ _FMCONTENT_META_TITLE
+ _FMCONTENT_META_KEYWORD
+ _FMCONTENT_META_DESCRIPTION
    
* _FMCONTENT_TOPIC_ONLINE
* _FMCONTENT_TOPIC_TIPS

modinfo.php
+ _FMCONTENT_HOMEPAGE 
+ _FMCONTENT_HOMEPAGE_DESC 
+ _FMCONTENT_HOMEPAGE_1 
+ _FMCONTENT_HOMEPAGE_2 
+ _FMCONTENT_HOMEPAGE_3 
+ _FMCONTENT_HOMEPAGE_4
+ _FMCONTENT_URL_SHORT
+ _FMCONTENT_TOPICNAME
+ _FMCONTENT_TOPICNAME_DESC   
+ _FMCONTENT_FILE
+ _FMCONTENT_FILE_DIR
+ _FMCONTENT_FILE_DIR_DESC
+ _FMCONTENT_FILE_SIZE
+ _FMCONTENT_FILE_SIZE_DESC
+ _FMCONTENT_FILE_MIME
+ _FMCONTENT_FILE_MIME_DESC
+ _FMCONTENT_BREAK_FILE

* _FMCONTENT_FRIENDLYURL_DESC
